<resources>
    <string name="app_name">My Important Day</string>
    <string name="welcome_to_my_important_day">Welcome to My Important Day!</string>
    <string name="title_home">Home</string>
    <string name="title_calendar">Calendar</string>


    <string name="title_settings">Settings</string>
    <string name="change_your_credentials">Change your credentials</string>
    <string name="change_your_username">Change your username</string>
    <string name="type_in_your_new_username">Type in your new username</string>
    <string name="change_username">Change Username</string>
    <string name="change_your_e_mail_address">Change your E-mail address</string>
    <string name="type_in_your_new_e_mail_address">Type in your new E-mail address</string>
    <string name="change_e_mail_address">Change E-mail address</string>
    <string name="change_your_password">Change your password</string>
    <string name="your_current_password">Your current password</string>
    <string name="your_new_password">Your new password</string>
    <string name="change_password">Change password</string>


    <string name="log_out">Log out</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="there_is_an_event_calendar">There is an event calendar</string>
    <string name="there_is_a_lock">There is a lock</string>
    <string name="there_is_an_account_box">There is an account box</string>
    <string name="there_is_a_calendar">There is a calendar</string>
    <string name="title_new_event">New Event</string>
    <string name="create_a_new_event">Create a new event</string>
    <string name="subject">Subject</string>
    <string name="describe_the_event_in_a_few_words">Describe the event in a few words</string>
    <string name="date">Date</string>
    <string name="specify_the_location_of_the_event">Specify the location of the event</string>
    <string name="place">Place</string>
    <string name="when_will_the_event_take_a_place">When will the event take place?</string>
    <string name="where_the_event_takes_place">Where will event take place?</string>
    <string name="priority">Priority</string>
    <string name="how_important_is_this_event">How important is this event?</string>
    <string name="advanced">Advanced</string>
    <string name="do_you_want_to_add_a_photo">Add a photo? (Optional)</string>
    <string name="create_event">Create event</string>
    <string name="photo">Photo</string>
    <string name="additional_info">Add more info? (Optional)</string>
    <string name="subjectBIG">SUBJECT:</string>
    <string name="dateBIG">DATE:</string>
    <string name="placeBIG">PLACE:</string>
    <string name="priorityBIG">PRIORITY:</string>
    <string name="advancedBIG">ADVANCED:</string>
    <string name="photoBIG">PHOTO</string>
    <string name="your_username_here">Your username here</string>
    <string name="your_e_mail_address_here">Your e-mail address here</string>
    <string name="there_is_an_at_symbol">There is an @ symbol</string>
    <string name="no_events">You don\'t have any events planned for today. You haven\'t forgotten anything, have you?</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet?</string>
    <string name="e_mail">E-mail</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="time">Time</string>
    <string name="what_time_the_event_take_place">What time the event take place?</string>
    <string name="select_date">Select date</string>
    <string name="prompt_password_again">Password (again)</string>
    <string name="desc">Description</string>
    <string name="status">Status</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="show_all_events">Show all events</string>
    <string name="all_your_events">All Your Events</string>
    <string name="save_event">Save Event</string>
    <string name="edit_photo">Edit photo</string>
    <string name="log_in">Log in</string>
    <string name="date_and_time">Date and time</string>
    <string name="select_date_and_time">Select date and time</string>


    <string-array name="priority_levels">
        <item>Normal</item>
        <item>Important</item>
        <item>Critical</item>
    </string-array>


</resources>