<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen"
    android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_baseline_calendar_today_24"
        app:tint="@color/holo_blue_dark"
        android:contentDescription="@string/there_is_a_calendar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/welcome_to_my_important_day"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/holo_blue_dark"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="16dp"
        android:hint="@string/prompt_username"
        android:background="@color/light_grey"
        android:inputType="text"
        android:drawableStart="@drawable/ic_baseline_account_box_24"
        android:selectAllOnFocus="true"
        android:autofillHints="" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:drawablePadding="16dp"
        android:hint="@string/e_mail"
        android:background="@color/light_grey"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="16dp"
        android:hint="@string/prompt_password"
        android:background="@color/light_grey"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:selectAllOnFocus="true"
        android:autofillHints="" />

    <Button
        android:id="@+id/registerBTN"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/holo_blue_dark"
        android:text="@string/action_register"
        tools:targetApi="lollipop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/already_have_an_account"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/loginBTN"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/holo_blue_dark"
        android:text="@string/action_sign_in"
        tools:targetApi="lollipop" />

    <ProgressBar
        android:id="@+id/loadingPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:visibility="gone" />
</LinearLayout>