<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.EmailChangeScreen"
    android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_baseline_alternate_email_24"
        app:tint="@color/holo_blue_dark"
        android:contentDescription="@string/there_is_an_at_symbol" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/change_your_e_mail_address"
        android:textStyle="bold"
        android:textColor="@color/holo_blue_dark"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:drawablePadding="16dp"
        android:hint="@string/type_in_your_new_username"
        android:imeActionLabel="@string/change_username"
        android:imeOptions="actionDone"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/changeEmailBTN"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/holo_blue_dark"
        android:text="@string/change_e_mail_address"
        tools:targetApi="lollipop" />


</LinearLayout>