<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="55dp"
        tools:context=".activities.loggedIn.fragments.NewEventFragment">

        <ImageView
            android:layout_marginTop="32dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_baseline_event_24"
            app:tint="@color/holo_blue_dark"
            android:contentDescription="@string/there_is_an_event_calendar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/subject"
            android:textStyle="bold"
            android:textColor="@color/holo_blue_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/subjectET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_baseline_subject_24"
            android:drawableStart="@drawable/ic_baseline_subject_24"
            android:drawablePadding="16dp"
            android:hint="@string/describe_the_event_in_a_few_words"
            android:autofillHints=""
            android:background="@color/light_grey"
            android:imeActionLabel="@string/describe_the_event_in_a_few_words"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/date_and_time"
            android:textStyle="bold"
            android:textColor="@color/holo_blue_dark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/dateAndTimeButton"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            android:text="@string/select_date_and_time"
            tools:ignore="UnusedAttribute" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/place"
            android:textStyle="bold"
            android:textColor="@color/holo_blue_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/placeET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_baseline_edit_location_alt_24"
            android:drawableStart="@drawable/ic_baseline_edit_location_alt_24"
            android:drawablePadding="16dp"
            android:hint="@string/where_the_event_takes_place"
            android:autofillHints=""
            android:background="@color/light_grey"
            android:imeActionLabel="@string/where_the_event_takes_place"
            android:imeOptions="actionDone"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/priority"
            android:textStyle="bold"
            android:textColor="@color/holo_blue_dark"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/prioritySP"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:background="@color/light_grey"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/advanced"
            android:textStyle="bold"
            android:textColor="@color/holo_blue_dark"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/advancedET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            android:drawableStart="@drawable/ic_baseline_info_24"
            android:drawablePadding="16dp"
            android:hint="@string/additional_info"
            android:autofillHints=""
            android:inputType="text"
            android:background="@color/light_grey" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:text="@string/photo"
            android:textStyle="bold"
            android:textColor="@color/holo_blue_dark"
            android:textSize="20sp" />

        <Button
            android:id="@+id/photoButton"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/grey"
            android:text="@string/do_you_want_to_add_a_photo"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/createEventButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:textStyle="bold"
            android:text="@string/create_event"
            tools:targetApi="lollipop" />

    </LinearLayout>

</ScrollView>
