<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_baseline_settings_24"
        app:tint="@color/holo_blue_dark"
        android:contentDescription="@string/there_is_a_lock" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/title_settings"
        android:textStyle="bold"
        android:textColor="@color/holo_blue_dark"
        android:textSize="25sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeUsernameButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/holo_blue_dark"
        android:text="@string/change_username"
        tools:targetApi="lollipop" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changeEmailButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/holo_blue_dark"
        android:text="@string/change_e_mail_address"
        tools:targetApi="lollipop" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/changePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/holo_blue_dark"
        android:text="@string/change_password"
        tools:targetApi="lollipop" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_grey"
        android:text="@string/log_out"
        tools:targetApi="lollipop" />


</LinearLayout>