<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsernameChangeActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:src="@drawable/ic_baseline_account_box_24"
        app:tint="@color/holo_blue_dark"
        android:contentDescription="@string/there_is_an_account_box" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:text="@string/change_your_username"
        android:textStyle="bold"
        android:textColor="@color/holo_blue_dark"
        android:textSize="25sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="16dp"
        android:hint="@string/type_in_your_new_username"
        android:drawableStart="@drawable/ic_baseline_account_box_24"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/lol"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:backgroundTint="@color/holo_blue_dark"
        android:text="@string/change_username"
        tools:targetApi="lollipop" />

</LinearLayout>