<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:context=".PasswordChangeScreen"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_baseline_lock_open_24"
            app:tint="@color/holo_blue_dark"
            android:contentDescription="@string/there_is_a_lock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:text="@string/change_your_password"
            android:textStyle="bold"
            android:textColor="@color/holo_blue_dark"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/oldPasswordET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="32dp"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="16dp"
            android:hint="@string/your_current_password"
            android:autofillHints=""
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/newPasswordET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="16dp"
            android:hint="@string/your_new_password"
            android:imeActionLabel="@string/your_new_password"
            android:imeOptions="actionDone"
            android:autofillHints=""
            android:inputType="textPassword" />

        <Button
            android:id="@+id/changePasswordBTN"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:textStyle="bold"
            android:backgroundTint="@color/holo_blue_dark"
            android:text="@string/change_password"
            tools:targetApi="lollipop" />
    </LinearLayout>
</ScrollView>